# claude-sandbox-report

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ce1a9d6f449_初期テーブル作成.py
backend/app/: main.py
backend/app/api/v1/: auth.py  customers.py  reports.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/models/: __init__.py  comment.py  customer.py  daily_report.py  user.py  visit_record.py
backend/app/repositories/: comment_repository.py  customer_repository.py  report_repository.py  user_repository.py  visit_record_repository.py
backend/app/schemas/: auth.py  comment.py  common.py  customer.py  report.py  user.py
backend/app/services/: auth_service.py  comment_service.py  customer_service.py  report_service.py  user_service.py
backend/scripts/: init-test-db.sh
backend/tests/: conftest.py  helpers.py
backend/tests/test_api/: test_auth.py  test_comments.py  test_customers.py  test_reports.py  test_users.py
backend/tests/test_core/: test_config.py  test_database.py  test_dependencies.py  test_error_handlers.py  test_exceptions.py  test_security.py
backend/tests/test_repositories/: test_user_repository.py
backend/tests/test_schemas/: test_common.py
backend/tests/test_services/: test_auth_service.py  test_comment_service.py  test_report_service.py  test_user_service.py
docs/: API_SCHEME.md  ARCHITECTURE.md  (+3 more)
(+76 files in other folders)
